<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/main_load"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >    
    <!--  top define -->
    <LinearLayout style="@style/style_signuptop_color"
        android:orientation="vertical"
        android:layout_width="match_parent"    
        android:layout_height="wrap_content">
              
	    <LinearLayout style="@style/style_signuptop_bgshape" 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal" >   
	        
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/signup_finishprofile"
		                android:textSize="20dp"
		                android:textColor="@color/color_signup2_text" />
	            
	    </LinearLayout>
    </LinearLayout>
    
    <!-- content define -->
    <LinearLayout android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="16dp">
    <TableLayout style="@style/edittext_bg_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp" >
        <TableRow android:gravity="center_vertical">
            <TextView android:text="@string/signup_qq"
                android:paddingRight="16dp"/>
            <EditText android:id="@+id/input_signup_qq"
                android:background="@color/transparent"
                android:inputType="number"
                android:singleLine="true"
                android:hint="@string/signup_hint_qq"
                android:paddingRight="66dp"/>
        </TableRow>
        <View android:layout_height="1dp"
            android:background="@color/gray"/>
        <TableRow android:gravity="center_vertical">
            <TextView android:text="@string/signup_hint_sex"
                android:paddingRight="16dp"/>

			<RadioGroup android:id="@+id/radioGroup_signupsex"
			    android:layout_width="wrap_content" android:layout_height="wrap_content"
			    android:orientation="horizontal" android:layout_gravity="left">
			    <RadioButton android:id="@+id/radio_male" android:height="16dp"
			        android:layout_width="wrap_content" android:layout_height="wrap_content"
			        android:text="@string/male" android:textColor="@color/black"/>
			    <RadioButton android:id="@+id/radio_female" 
			        android:layout_width="wrap_content" android:layout_height="wrap_content"
			        android:text="@string/female" android:textColor="@color/black"/>
			</RadioGroup>
        </TableRow>
        <View android:layout_height="1dp"
            android:background="@color/gray"/>
        <TableRow android:gravity="center_vertical">
            <TextView android:text="@string/signup_hint_city"
                android:paddingRight="16dp"/>
            <TextView android:id="@+id/signup_input_city"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>

	    <Button android:id="@+id/btn_signup_commit" 
	        android:text="@string/signup_commit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="onCommitClick"/>

    </LinearLayout>

</LinearLayout>
</merge>